@@ -55,12 +55,14 @@ in this Software without prior written authorization from the X Consortium.
 #define NEGATE_CHARACTER    '!'
 #define CHOOSER_STRING	    "CHOOSER"
 #define BROADCAST_STRING    "BROADCAST"
+#define NOBROADCAST_STRING  "NOBROADCAST"
 
 #define HOST_ALIAS	0
 #define HOST_ADDRESS	1
 #define HOST_BROADCAST	2
 #define HOST_CHOOSER	3
-
+#define HOST_NOBROADCAST    4
+ 
 typedef struct _hostEntry {
     struct _hostEntry	*next;
     int	    type;
@@ -78,6 +80,7 @@ typedef struct _displayEntry {
     struct _displayEntry    *next;
     int			    type;
     int			    notAllowed;
+    int			    notBroadcast;
     int			    chooser;
     union _displayType {
 	char		    *aliasName;
@@ -259,6 +262,10 @@ tryagain:
     {
 	h->type = HOST_BROADCAST;
     }
+    else if (!strcmp (hostOrAlias, NOBROADCAST_STRING))
+    {
+	h->type = HOST_NOBROADCAST;
+    }
     else
     {
 	h->type = HOST_ADDRESS;
@@ -310,6 +317,7 @@ ReadDisplayEntry (file)
     	return NULL;
     d = (DisplayEntry *) malloc (sizeof (DisplayEntry));
     d->notAllowed = 0;
+    d->notBroadcast = 0;
     d->chooser = 0;
     if (*displayOrAlias == ALIAS_CHARACTER)
     {
@@ -386,6 +394,9 @@ ReadDisplayEntry (file)
 	{
 	    FreeHostEntry (h);
 	    d->chooser = 1;
+	} else if (h->type == HOST_NOBROADCAST) {
+	    FreeHostEntry (h);
+	    d->notBroadcast = 1;
 	} else {
 	    *prev = h;
 	    prev = &h->next;
@@ -744,7 +755,8 @@ int AcceptableDisplayAddress (clientAddress, connectionType, type)
     }
     if (clientName)
 	free (clientName);
-    return (d != 0) && (d->notAllowed == 0);
+    return (d != 0) && (d->notAllowed == 0)
+	&& (type == BROADCAST_QUERY ? d->notBroadcast == 0 : 1);
 }
 
 #endif /* XDMCP */
