@@ -59,7 +59,16 @@ typedef unsigned int    UINT32;                 // 32 bit unsigned
 #include "kdmshutdown.h"
 #include "kdmconfig.h"
 
-//class KGreeter : public QDialog {
+class KLoginLineEdit : public QLineEdit {
+     Q_OBJECT
+public:
+     KLoginLineEdit( QWidget *parent = 0) : QLineEdit(parent) {}
+signals:
+     void lost_focus();
+protected:
+     void focusOutEvent( QFocusEvent *e);
+};
+
 class KGreeter : public QWidget {
      Q_OBJECT
 public:
@@ -89,7 +98,7 @@ private:
      QLabel*        loginLabel;
      QLabel*        passwdLabel;
      QLabel*        failedLabel;
-     QLineEdit*     loginEdit;
+     KLoginLineEdit*     loginEdit;
      QLineEdit*     passwdEdit; 
      QFrame*        separator;
      QPushButton*   goButton;
